[metadata]
name = onspring-api-sdk-python
version = 1.0.0
author = StevanFreeborn
author_email = stevan.freeborn@gmail.com
description = A package for interacting with version 2 of the Onspring API. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StevanFreeborn/onspring-api-sdk-python
project_urls =
    Bug Tracker = https://github.com/StevanFreeborn/onspring-api-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src